storage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: storagetest
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 1
            memory: "700M"
          limits: 
            cpu: 2
            memory: "1500M"    
        volumeMounts:
          - name: datastore
            mountPath: /var/lib/mysql/
      volumes:
        - name: datastore
          persistentVolumeClaim:   
            claimName: externalstoragepvc
