storage/wpdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: storagetest
spec:
  selector:
    matchLabels:
      app: wpapp
  template:
    metadata:
      labels:
        app: wpapp
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: "700M"
          limits: 
            cpu: 2
            memory: "1500M"    
        volumeMounts:
          - name: wpdatastore
            mountPath: /var/www/html
      volumes:
        - name: wpdatastore
          persistentVolumeClaim:   
            claimName: externalstoragewppvc
