storage/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: storagetest 
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
  - name: mysql-port
    port:  3306
    targetPort: 3306
    nodePort: 31336
