storage/wpservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: storagetest 
spec:
  selector:
    app: wpapp
  type: ClusterIP
  ports:
  - name: wp-port
    port: 8080
    targetPort: 80
